--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.6.3",
-        "bootstrap": "4.2.1",
+        "bootstrap": "^4.3.1",
         "jquery": "3.3.1",
         "jquery.easing": "^1.4.1",
-        "magnific-popup": "^1.1.0"
+        "magnific-popup": "^1.1.0",
+        "popper.js": "^1.14.7"
     },
     "devDependencies": {
         "browser-sync": "2.26.3",
